k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-system-test
spec:
  selector:
    app: voting-system-test
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
