k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-system-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: app.ndutaaah.org
      http:
        paths:
          - path: (/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-system-test
                port:
                  number: 80
